Add hover cursor and transition

--- a/template.html
+++ b/template.html
@@ -15,7 +15,9 @@
     <header>
       <div class="navigation-arrows">
         <span class="arrow material-symbols-outlined"> arrow_back_ios </span>
-        <span class="arrow material-symbols-outlined"> arrow_forward_ios </span>
+        <span id="auto" class="arrow material-symbols-outlined">
+          arrow_forward_ios
+        </span>
       </div>
       <div class="carousel"></div>
       <div class="navigation-dots"></div>
